# fenicsx-error-estimation

./: .gitignore  .isort.cfg  AUTHORS  COPYING  MANIFEST.in  README.md  README.rst  build-image.sh  err.txt  launch-container.sh  push-image.sh  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: main.yml
bank_weiser/: __init__.py  estimate.py  interpolate.py  mark.py
bank_weiser/cpp/: CMakeLists.txt  bank_weiser.cpp
demo/: README.rst  requirements.txt  setup.cfg  test_demos.py
demo/adaptivity/: demo_adaptivity.py  demo_adaptivity_dolfinx.py  exact_solution.h  generate_mesh.py  mesh.h5  mesh.xdmf  plot_convergence.py
demo/dolfinx/: demo_dolfinx.py  demo_dolfinx_three_dimensional.py  demo_three_dim_adaptive.py  dof_numbering.py  interior_facet_assembler.py  interpolation.npy
demo/fractional/: FE_utils.py  demo_fractional.py  marker.py  plot.py  plots.mplstyle  rational_schemes.py  rational_sum_parameters.py  run.sh
demo/fractional-adaptive/: demo_fractional-adaptive.py  demo_fractional.py
demo/fractional_adaptive/: demo_fractional-adaptive.py
demo/fractional_adaptive_checkerboard/: demo_fractional-adaptive-checkerboard.py  demo_fractional-adaptive.py  plot.py  plot_convergence.py
demo/fractional_adaptive_scheme/: demo_adaptive_scheme.py  plot.py
demo/fractional_adaptive_torus/: plot_convergence.py
demo/fractional_bp_vs_bura/: demo_bp_vs_bura.py  plot.py
demo/fractional_bura/: brasil_bura_coefs.csv  demo_bura.py  plot.py
demo/fractional_checkerboard_bp_vs_bura/: demo_bp_vs_bura.py  plot.py
demo/fractional_sines_bp_vs_bura/: demo_bp_vs_bura.py  plot.py
demo/goal-oriented/: J_exact.py  P1_template.tex  demo_goal-oriented.py  demo_goal_oriented.py  generate_mesh.py  minimal.py  pkl2tex.py  plot_convergence.py  run-results.py
demo/goal_oriented_adaptivity/: demo_goal-oriented-adaptivity.py  generate_mesh.py  mesh.h5  plot_convergence.py  plot_efficiency.py
demo/incompressible_elasticity/: demo_incompressible-elasticity.py  plot_convergence.py
demo/mixed_poisson/: demo_non-zero-neumann.py  plot_convergence.py
demo/multimaterial/: demo_multimaterial.py
demo/pure_dirichlet/: demo_pure-dirichlet.py
demo/pure_neumann/: demo_pure-neumann.py
demo/stokes/: demo_stokes.py  (+1 more)
docker/: Dockerfile  build-images.sh  push-images.sh
fenics_error_estimation/: __init__.py  estimate.py  interpolate.py  mark.py
fenics_error_estimation/cpp/: CMakeLists.txt  projected_local_solver.cpp
fenicsx_error_estimation/: __init__.py  estimate.py  mark.py
test/: conftest.py  marker_pos.py  requirements.txt  test_global_interpolation.py  test_interpolation_operator.py  test_lagrange_multipliers.py  test_local_interpolation.py  test_mark.py
(+38 files in other folders)
